--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Critical for creating releases and uploading assets
     
     steps:
     - name: Checkout repository
